# EMEsolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h  emeSmatrix.h  emeTmaxtrix.h  sconnectright.h
src/: emeSmatrix.cpp  emeTmaxtrix.cpp  load_hdf5.cpp  main.cpp  sconnectright.cpp
